[gd_scene load_steps=4 format=1]

[ext_resource path="res://Assets/Scripts/Buttons/TabletApplyBtn1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/Buttons/ApplyAllTabletButtons1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/Buttons/ResetAllTabletButtons1.gd" type="Script" id=3]

[node name="TabletButtonsVBC" type="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 317.0
margin/bottom = 545.0
custom_constants/separation = 16
alignment = 0

[node name="BTN1" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 1

[node name="LineEdit" type="LineEdit" parent="BTN1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BTN2" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 307.0
margin/bottom = 64.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-2"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 2

[node name="LineEdit" type="LineEdit" parent="BTN2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BTN3" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 307.0
margin/bottom = 104.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 3

[node name="LineEdit" type="LineEdit" parent="BTN3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BTN4" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 307.0
margin/bottom = 144.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-4"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 8

[node name="LineEdit" type="LineEdit" parent="BTN4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HSeparator" type="HSeparator" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 307.0
margin/bottom = 163.0

[node name="BTN5" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 179.0
margin/right = 307.0
margin/bottom = 203.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN5"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-5"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN5"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 9

[node name="LineEdit" type="LineEdit" parent="BTN5"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BTN6" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 219.0
margin/right = 307.0
margin/bottom = 243.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN6"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-6"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN6"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 10

[node name="LineEdit" type="LineEdit" parent="BTN6"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BTN7" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 259.0
margin/right = 307.0
margin/bottom = 283.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN7"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-7"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN7"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 11

[node name="LineEdit" type="LineEdit" parent="BTN7"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="BTN8" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 299.0
margin/right = 307.0
margin/bottom = 323.0
custom_constants/separation = 8
alignment = 0

[node name="Label" type="Label" parent="BTN8"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 56.0
margin/bottom = 19.0
text = "Button-8"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="BTN8"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false
script/script = ExtResource( 1 )
btnID = 12

[node name="LineEdit" type="LineEdit" parent="BTN8"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 307.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HSeparator1" type="HSeparator" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 339.0
margin/right = 307.0
margin/bottom = 342.0

[node name="BTN9" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 358.0
margin/right = 307.0
margin/bottom = 378.0
custom_constants/separation = 8
alignment = 0

[node name="Button" type="Button" parent="BTN9"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 123.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Apply All Buttons"
flat = false
script/script = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="BTN9"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 131.0
margin/top = 0.0
margin/right = 134.0
margin/bottom = 20.0

[node name="Button1" type="Button" parent="BTN9"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 142.0
margin/top = 0.0
margin/right = 265.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Reset All Buttons"
flat = false
script/script = ExtResource( 3 )


